fixes email text contrast

--- a/src/indigo/less/kbc-user.less
+++ b/src/indigo/less/kbc-user.less
@@ -144,6 +144,9 @@
     .kbc-user-name, .kbc-user-email {
       text-align: right;
     }
+    .kbc-user-email {
+       color: #ddd;
+    }
     .kbc-user-avatar {
       float: right;
       margin-left: .75em;
